<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Grandee Notes</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <!--Facebook-->
    <string name="facebook_app_id" tools:ignore="MissingTranslation">614049552484376</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb614049552484376</string>

    <!--Gmail-->
    <string name="web_client_id" tools:ignore="MissingTranslation">476849697961-mp93cmobo60tggji6cl0gts0uqt42tdm.apps.googleusercontent.com</string>
    <string name="Secrate" tools:ignore="MissingTranslation">qZAUpoduZZdoaPecr_4Ev_PC</string>


    <!--Login-->

    <string name="email">Email Address</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>

    <string name="login">Login</string>
    <string name="skip1">Skip</string>
    <string name="dont">Don\'t have an account ?</string>
    <string name="signup"> Signup</string>
    <string name="logout"> logout</string>

    <!--End Login-->

    <!--Registration-->

    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="signup_cap">SIGN UP</string>
    <string name="already_account">Already have an account Yet?</string>

    <!--End Registration-->

    <!--About Us-->

    <string name="Company">Company</string>
    <string name="website">Website</string>
    <string name="Contact">Contact</string>

    <!--End About Us-->

    <!--Home-->

    <string name="Category">Category</string>
    <string name="Categories">Categories</string>
    <string name="View_all">View All</string>


    <string name="Top_Reading_Book">Top Reading Book</string>
    <string name="New_Arrival_Book">New Arrival Book</string>
    <string name="Authors">Author</string>
    <string name="notification" >Notifications</string>
    <string name="Free_Book">Free Book</string>
    <string name="Paid_Book">Paid Book</string>
    <string name="Continue_Reading">Continue Reading</string>

    <!--End Home-->

    <!--Search-->

    <string name="Search">Search</string>
    <string name="See_All">See All</string>
    <string name="Payment">Payment</string>
    <string name="Please_select_any_payment_method">Please select any payment method</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="Books">Books</string>

    <string name="Reviews">Reviews</string>
    <string name="Downloads">Downloads</string>
    <string name="Book_Details">Book Details</string>
    <string name="What_is_this_book_about">What is this book about ?</string>

    <string name="Related_Books">Related Books</string>
    <string name="Comments">Comments</string>
    <string name="Write_your_comments">Write your comments</string>

    <string name="My_Purchase_Books">My Purchase Books</string>
    <string name="ALLOW_PERMISSION">ALLOW PERMISSION</string>

    <string name="wel_one">Find all books and notes that you need of your course</string>
    <string name="wel_two">get updated old question collection </string>
    <string name="wel_three">share your questions and problems to the public.</string>
    <string name="wel_four">Download books and other resources and read even in offline</string>
    <!--End Search-->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_Premium">Premium</string>
    <string name="title_settings">Settings</string>
    <string name="isRTL">false</string>
    <string name="internet_connection">Internet connection not available</string>

    <string name="permission_desc">Now we need your permission to continue use the application perfectly</string>
    <string name="permission_title">Everything is okey</string>


    <string name="profile">Profile</string>
    <string name="save">save</string>

    <string name="my_Purchase_book">My Purchase Books</string>
    <string name="my_downloaded_book">My Downloaded Books</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="enable_theme">Enable Day/Night mode</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="locally_cached_data">locally cached data</string>
    <string name="no_cache_found" >no cached found</string>
    <string name="Privacy_policy">Privacy policy</string>

    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="downloading">Downloading</string>

    <string name="change_language">Language</string>
    <string name="course" >Course</string>
    <string name="ask" >Ask</string>
    <string name="teachers" >Teachers</string>
    <string name="semester" >Semester</string>
    <string name="syllabus">Syllabus</string>
    <string name="oldquestion">Old Question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_question">Old Question</string>
    <string name="your_course">Your course</string>
    <string name="question_and_answers">Question and Answers</string>
    <string name="ask_your_question">Ask Your Question</string>
    <string name="what_is_your_question">What is your question?</string>
    <string name="title_question">Question Fourm</string>
    <string name="question_here">Question here</string>
    <string name="question">Question</string>
    <string name="answer_here">answer here</string>
    <string name="_0">0</string>
    <string name="your_answer_here">your answer here</string>
    <string name="results">Searched Results</string>
    <string name="recent_searches">Recent Search</string>
    <string name="update_your_answer">Update your Answer</string>
    <string name="delete_history">Delete history</string>
    <string name="Download">Download</string>


</resources>
