<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundcolor"
        android:orientation="vertical"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.cardview.widget.CardView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="@dimen/spacing_middle"
                android:clipToPadding="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="2dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@android:color/transparent"
                        android:tint="@color/grey_60"
                        app:srcCompat="@drawable/ic_search" />

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/Search"
                        android:imeOptions="actionSearch"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true">

                        <requestFocus />

                    </EditText>

                    <ImageButton
                        android:id="@+id/bt_clear"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:tint="@color/grey_60"
                        app:srcCompat="@drawable/ic_close" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/ly_recent_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:weightSum="1.0">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="0dp"

                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="0.7"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center_vertical"
                            android:text="@string/delete_history"
                            android:textColor="?attr/textcolor"
                            android:textSize="@dimen/text_16" />
                        <TextView
                            android:id="@+id/clear_history"
                        android:layout_margin="8dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.3"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical"
                        android:text="@string/recent_searches"
                        android:textColor="?attr/textcolor"
                        android:textSize="@dimen/text_16" />


                    </LinearLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recent_search"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="3dp"
                    android:minHeight="@dimen/min_height"
                    android:scrollbars="none"
                    />
                </LinearLayout>

              <LinearLayout
                    android:id="@+id/ly_all_books"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:weightSum="1.0">

                    <TextView
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.7"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical"
                        android:text="@string/Related_Books"
                        android:textColor="?attr/textcolor"
                        android:textSize="@dimen/text_16" />



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_all_books"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:minHeight="@dimen/min_height"
                    android:scrollbars="none"
                    />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_search_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:weightSum="1.0">

                    <TextView
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.7"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical"
                        android:text="@string/results"
                        android:textColor="?attr/textcolor"
                        android:textSize="@dimen/text_16" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_search_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:scrollbars="vertical"
                        android:visibility="visible" />
                </RelativeLayout>


                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/ly_dataNotFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/datanotfoundicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Record Not Found"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="?attr/textcolor"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>